--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -4,23 +4,23 @@
 /* ----------------------- the header section css -------------------------- */
 
 header{
-    background-color: aqua;
+    /* background-color: aqua; */
     width: 100%;
     /* height: 50px;  */
 
 }
 
 .background-color {
-    background-color: rgb(0, 0, 0); 
-    
+    /* background-color: rgb(0, 0, 0);  */
+    height: 40vh;
     position: relative;
     /* overflow: hidden; */
 }
 
 .background-overlay {
     background-image: url('../images/nav_background.png');
-    /* background-size: 100% 100%; */
-    background-size: contain;
+    background-size: 100% 100%;
+    /* background-size: contain; */
     background-position: center;
     opacity: 0.2; /* Image opacity */
     position: absolute;
