--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -11,7 +11,7 @@ header{
 }
 
 .background-color {
-    /* background-color: rgb(0, 0, 0);  */
+    background-color: rgb(0, 0, 0); 
     height: 40vh;
     position: relative;
     /* overflow: hidden; */
