--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -6,7 +6,7 @@
 
 
 /* Background and overlay styling */
-.background-color {
+.login-background{
     background-color: rgb(0, 0, 0); /* Dark background color */
     position: relative;
     height: 100vh;
