--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -69,6 +69,8 @@
 .create-assistant-btn:hover {
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
+        border: 1px solid gray;
+
 }
 
 
