--- a/src/assets/styles/CreateAssistant.css
+++ b/src/assets/styles/CreateAssistant.css
@@ -1,14 +1,57 @@
+/* ------------------------------------------------------------------------ */
+/* ------------------- Add responsiveness for smaller screens ------------- */
+
+/* @media (max-width: 768px) {
+  .create-assistant {
+        width: 70%;
+    }
+}
+
+@media (max-width: 576px) {
+  .create-assistant {
+        width: 100%;
+    }
+} */
+@media (max-width: 768px) {
+  .form-control,
+  .form-select,
+  .form-color-input {
+    width: 100%;
+  }
+
+  .form-group {
+    margin-bottom: 1.5rem;
+  }
+
+  .upload-area {
+    font-size: 14px;
+  }
+
+  .custom-btn {
+    font-size: 14px;
+    padding: 10px;
+  }
+}
+
+.file-upload-container {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 15px;
+}
+
+
+
+/* ----------------form  */
 .create-assistant {
   /* background-color: #88df80; */
   background-color: #fff;
-
   position: absolute;
-  top: 50;
-  /* right: 0; */
+  top: 0;
+  right: 0;
   padding: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1500;
-  width: 50%;
+  min-width: 40%;
   margin: auto;
 }
 
