--- a/src/assets/styles/Error404.css
+++ b/src/assets/styles/Error404.css
@@ -1,8 +1,6 @@
 /* Error Page Styles */
 .error-page {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
+
     align-items: center;
     height: 100vh;
     background-color: #ffffff; 
@@ -14,7 +12,7 @@
     left: 0;
     right: 0;
     width: 100%;
-    margin-top: -7rem;
+    margin-top: -9rem;
   }
   
   .error-content {
@@ -24,7 +22,7 @@
   
   .error-illustration .error-image {
     max-width: 100%;
-    width: 30rem;
+    width: 25rem;
     height: auto;
   }
  
@@ -37,6 +35,7 @@
     border-radius: 12px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-top: 10px;
   }
   
   .error-btn:hover {
@@ -55,6 +54,7 @@
     }
   
     .error-btn {
+      
       font-size: 14px;
       padding: 8px 16px;
     }
