--- a/src/assets/styles/CreateAssistant.css
+++ b/src/assets/styles/CreateAssistant.css
@@ -101,6 +101,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
+  text-decoration: none;
 }
 
 /* -------------------- form styling  ----------------------- */
