--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -13,7 +13,7 @@ header{
 .background-color {
     background-color: rgb(0, 0, 0); 
     height: 40vh;
-    position: relative;
+    position: relative; 
     /* overflow: hidden; */
 }
 
@@ -34,10 +34,11 @@ header{
 
 .mynavbar{
     /* background-color: blue; */
-    width: 100%;
-    height: 20vh;
+    width: 95%;
+    height: 15vh;
     /* position: fixed; */
     z-index: 1500;
+    margin: auto;
 
 }
 
@@ -53,7 +54,6 @@ header{
 
 
 .meddle-icons{
-    /* background-color: tomato; */
     width: 100%;
     display: flex;
     align-items: center;
@@ -68,28 +68,59 @@ header{
     justify-content: space-around;
 }
 
+
+/* Change background to solid black when navbar is expanded */
+.collapse.navbar-collapse.show.meddle-icons ,.logout-countner {
+    background-color: rgb(0, 0, 0);
+    transition: background-color 0.3s ease; /* Smooth transition */
+}
+
+.collapse.navbar-collapse.show.logout-countner {
+    background-color: rgb(0, 0, 0);
+    transition: background-color 0.3s ease; 
+}
+
+
+
+/* ----------------dark them -------------- */
+.dark-mode-toggle {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+  }
+  
+  /* .dark-theme {
+    background-color: #333;
+    color: #fff;
+  } */
+
+
 .logout-countner{
-    width: 20%;
-    background-color: green;
+    /* width: 20%; */
+    /* background-color: #f10000; */
+    padding: 0;
 }
 
 
 .logout{
     margin-left: auto;
-    background-color: #fff;
-    padding: 0.3rem;
+    background-color: #000000;
     border-radius: 80px;
+    color: #fff;
 }
 
-
+.logout svg{
+    margin-left: 10px;
+}
 .logout a{
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 /* Navbar Collapse Styling */
 .navbar-dark .navbar-collapse {
 
-    background-color: rgba(0, 0, 0, 0.95); /* Dark background for visibility */
+    /* background-color: rgba(0, 0, 0, 0.01); */
     padding: 1rem; /* Optional: Add padding */
 }
 
@@ -120,3 +151,5 @@ header{
     padding: 1rem;
     width: 100%;
 }
+
+
