fix the dark theme for the main page

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -23,7 +23,7 @@
 /* Dark Theme Overrides */
 .dark-theme {
   --background-color: #121212;
-  --text-color: #ffffff;
+  --text-color: #ffffff !important;
   --navbar-bg: #000000;
   --link-color: #ffffff;
   --link-hover-color: #cccccc;
