--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -311,6 +311,7 @@
     .assistant-card {
         padding: 20px;
         border-radius: 10px;
+        border: 0.5px solid var(--text-color) ;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
         background-color: var(--background-color);
         color: var(--text-color);
